# qasimodo-specs

./: .gitignore  README.md  flake.nix  pyproject.toml
.github/: renovate.json
.github/workflows/: check.yml  publish.yml
nix/: formatting.nix  package.nix  shell.nix
scripts/: build_proto.py
src/qasimodo_specs/proto/: agent.proto
